bluefish (1.0.7-2) UNRELEASED; urgency=low

  * NOT RELEASED YET
  * debian/patches/02_431023_fix_segfault_in_aspell.dpatch: Added.
    - src/bfspell.c: Turn off the `Add( word)' button to prevent bluefish
      crashing (closes: #431023).

 -- Daniel Leidert (dale) <daniel.leidert@wgdd.de>  Sat, 19 May 2007 05:26:55 +0200

bluefish (1.0.7-1) unstable; urgency=medium

  * New upstream release 1.0.7.
    - Fixes an issue where Bluefish would segfault if trying to save from a
      clean install (closes: #396735).
    - Fixes the MIME type icon name.
    - Fixes Tcl highlighting pattern.
    Get more information about fixes and improvements from
    /usr/share/doc/bluefish/changelog.gz.
  
  [ Daniel Leidert ]
  * debian/patches/02_fix_396095.dpatch: Removed. Fixed upstream.
  * debian/patches/10_fix_mime_icon_name.dpatch: Ditto.
  * debian/patches/11_fix_tcl_highlighting.dpatch: Ditto.
  * debian/patches/00list: Adjusted.
  * debian/changelog: Fixed the bug-number in Steinars NMU entry.

 -- Daniel Leidert (dale) <daniel.leidert@wgdd.de>  Sat, 18 Nov 2006 02:44:39 +0100

bluefish (1.0.6-2) UNRELEASED; urgency=medium

  [ Daniel Leidert ]
  * debian/patches/10_fix_mime_icon_name.dpatch: Added.
    - data/Makefile.in: Fix the name of the icon for the
      application/bluefish-project MIME type.
    - data/bluefish.keys (icon_filename): Ditto.
  * debian/patches/11_fix_tcl_highlighting.dpatch: Added.
    - data/highlighting.in (Tcl, tcl): Fixed Tcl highlighting.
  * Putting urgency to medium for Etch.

 -- Daniel Leidert (dale) <daniel.leidert@wgdd.de>  Mon,  2 Oct 2006 15:23:50 +0200

bluefish (1.0.6-1.1) unstable; urgency=medium

  * Non-maintainer upload.
  * 02_fix_396095.dpatch: Fix an issue where Bluefish would segfault if trying
    to save from a clean install; patch from upstream CVS. (Closes: #396735)

 -- Steinar H. Gunderson <sesse@debian.org>  Sun, 12 Nov 2006 16:53:32 +0100

bluefish (1.0.6-1) unstable; urgency=low

  * New upstream release 1.0.6.