@@ -5,9 +5,9 @@
 # Uncomment this to turn on verbose mode.
 # export DH_VERBOSE=1
 
-include /usr/share/dpatch/dpatch.make
-
 PACKAGE=bluefish
+
+include /usr/share/dpatch/dpatch.make
 
 CFLAGS= -Wall -g
 
@@ -45,7 +45,7 @@ clean: unpatch
 	-rm -f build-stamp patch-stamp
 	
 	# Add here commands to clean up after the build process.
-	-$(MAKE) distclean
+	[ ! -f Makefile ] || $(MAKE) distclean
 	
 	-test -r /usr/share/misc/config.sub && \
 		cp -f /usr/share/misc/config.sub config.sub
